17774
{code}
scala> val v = q"val x: Int"
v: reflect.runtime.universe.ValDef = val x: Int

scala> q"def foo($v)"
res3: reflect.runtime.universe.DefDef = def foo(x: Int): scala.Unit

scala> val v: Tree = q"val x: Int"
v: reflect.runtime.universe.Tree = val x: Int

scala> q"def foo($v)"
<console>:31: error: type mismatch;
 found   : List[List[reflect.runtime.universe.Tree]]
 required: List[List[$u.ValDef]]
              q"def foo($v)"
              ^
{code}

The same goes for TypeDefs and CaseDefs.
